new Boolean is deprecated using valueOf instead